# FolderIcon

./: .gitignore  CLAUDE.md  CMakeLists.txt  FolderIcon.sln  FolderIconC.vcxproj  README.md  build.bat  build_simple.cmd  main.c
.github/workflows/: build-release.yml
